--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<section>
+		Enter rows:<input type = "text" id = "userrows"><br>
+		Enter cols:<input type = "text" id = "usercols"><br>
+		Enter bombs:<input type = "text" id = "userbombs"><br>
+		<button onclick = "startgame()">Go</button>
+	</section>
 	<center>
 		<table border = "2" cellspacing="0">
 				
 		</table>
 	</center>
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src = "script.js"></script>
 </body>
