flags to mark bombs added for pc users, and a few features added to the user form

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<section>
-		Enter rows:<input type = "text" id = "userrows"><br>
-		Enter cols:<input type = "text" id = "usercols"><br>
+		Enter rows:<input type = "text" id = "userrows" placeholder="max 30"><br>
+		Enter cols:<input type = "text" id = "usercols" placeholder="max 30"><br>
 		Enter bombs:<input type = "text" id = "userbombs"><br>
 		<button onclick = "startgame()">Go</button>
 	</section>
